fix: align text in banner h1

--- a/css/global.css
+++ b/css/global.css
@@ -104,6 +104,7 @@ header {
   font-size: 2rem;
   font-weight: 700;
   padding-left: 0.3rem;
+  text-align: center;
 }
 
 main {
